feat: add BaseTest.java